--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	        <span class="pull-right">
 				<small ng-show="$root.user">		        	
 	            	<a class="btn btn-info btn-xs" ui-sref="upload"><span class="fui-image"></span> Upload photo</a>
-	            	<a class="btn btn-primary btn-xs" ui-sref="logout"><span class="fui-power"></span> Log out</a>
+	            	<a class="btn btn-danger btn-xs" ui-sref="logout"><span class="fui-power"></span> Log out</a>
 		        </small>
 		        <small ng-hide="$root.user">
 		        	<a class="btn btn-primary btn-xs" ui-sref="signup"><span class="fui-user"></span> Sign up</a>
